--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div class="profile">
         <img class = "profile-img" src="images/profile-img.png" alt="profile-picture">
         <h2>Hello.</h2>
-        <p class="intro">I'm currently a student at The College of Saint Rose studying Computer Science and Mathematics, working as a part-time Academic Tutor at The College of Saint Rose. I love coffee and black tea.</p>
+        <p class="intro">I'm currently a student at The College of Saint Rose studying Computer Science and Mathematics, working as a Unisys Production Control Intern at NYS Office of Information Technology Services. I love coffee and black tea.</p>
       </div>
       <hr>
       <div class="skills">
